# usa_metrics

./: README.md  flake.nix  pyproject.toml
src/: 1_ejemplos_numpy.ipynb  3_linear_regression.ipynb  4_linear_regression_analytical.ipynb  5_clasificacion.ipynb  6_clasificador_bayesiano.ipynb  7_kmeans.ipynb  8_svd.ipynb  9_pca_examples.ipynb  taller1.ipynb  taller1.py
